--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,3 +23,4 @@ services:
       - ./config:/usr/src/app/config # Config files
       - ./db:/usr/src/app/db/production # Database folder
       - ./data:/usr/src/app/data/production # Data folder
+    tmpfs: /tmp
